# tomo

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  bar  deny.toml
.claude/skills/cross-release/: SKILL.md
.claude/skills/rust-hygiene/: SKILL.md
.claude/skills/scenario-testing/: SKILL.md
.github/workflows/: ci.yml  pages.yml  release.yml
crates/tomo/: Cargo.toml  build.rs
crates/tomo-config/: Cargo.toml
crates/tomo-config/src/: lib.rs
crates/tomo-engine/: Cargo.toml
crates/tomo-engine/proptest-regressions/: index.txt
crates/tomo-engine/src/: clock.rs  engine.rs  event.rs  index.rs  lib.rs  path.rs  pressure.rs
crates/tomo-history/: Cargo.toml
crates/tomo-history/src/: error.rs  lib.rs  store.rs
crates/tomo-history/tests/: concurrent.rs  dedup.rs  integrity.rs  props.rs  roundtrip.rs  versions.rs
crates/tomo-history/tests/common/: mod.rs
crates/tomo-proto/: Cargo.toml
crates/tomo-proto/src/: error.rs  frame.rs  lib.rs  message.rs
crates/tomo-proto/tests/: roundtrip.rs
crates/tomo-transport/: Cargo.toml  build.rs
crates/tomo-transport/src/: binsource.rs  bootstrap.rs  error.rs  hostspec.rs  lib.rs  quote.rs  remotepath.rs  ssh.rs  sshconfig.rs  triple.rs
crates/tomo-watch/: Cargo.toml
crates/tomo-watch/src/: canon.rs  error.rs  lib.rs  norm.rs  scan.rs  scancache.rs  sig.rs  watcher.rs
crates/tomo/src/: apply.rs  applyguard.rs  attach.rs  buildinfo.rs  chunkxfer.rs  cli.rs  completions.rs  conflicts_cmd.rs  connect.rs  crossing.rs  dev_cmd.rs  diff_cmd.rs  error.rs  events_cmd.rs  fsguard.rs  fsprobe.rs  fsutil.rs  histmode.rs  history_cmd.rs  init.rs  layout.rs  lockfile.rs  logs.rs  main.rs  out.rs  overlap.rs  pause_cmd.rs  persist.rs  readme.rs  replica.rs  report.rs  serve.rs  session.rs  status.rs  stop.rs  style.rs  sync.rs  target.rs  textdiff.rs  transport.rs  (+2 more)
crates/tomo/src/ctl/: broadcast.rs  mod.rs  proto.rs  server.rs
crates/tomo/src/tui/: mod.rs  run.rs  state.rs  view.rs
docs/: HANDOFF-MACOS.md  NOTES.md  RELEASING.md  ROADMAP.md  SEED-PERF.md  SPEC.md  TESTING.md  UX-V2.md
scenarios/: 01_basic_propagation.sh  02_echo_suppression.sh  03_atomic_saves.sh  04_bootstrap.sh  05_history_fidelity.sh  06_adaptive_history.sh  07_conflict_convergence.sh  08_delete_vs_edit.sh  09_kill9_recovery.sh  10_offline_queue.sh  11_large_file_churn.sh  12_ignore_semantics.sh  13_clock_skew.sh  14_storm_stress.sh  15_single_session.sh  16_ssh_config.sh  17_dual_git_isolation.sh  18_exec_bit.sh  19_type_replacement.sh  20_filename_semantics.sh  21_disk_full.sh  22_adoption_divergence.sh  23_control_channel.sh  24_conflict_ux.sh  25_lifecycle.sh  26_tui_smoke.sh  27_history_ctl.sh  28_pause_resume.sh  29_self_update.sh  30_seed_correctness.sh  31_seed_kill9.sh  32_seed_interrupt_live.sh  README.md  run-all.sh
scenarios/lib/: harness.sh
scripts/: bench-seed.sh  release.sh
site/: index.html  install.sh
site/docs/: benchmarks.html  commands.html  compared.html  configuration.html  docs.css  docs.js  examples.html  how-it-works.html  index.html  interface.html  internals-engine.html  internals-history.html
