[workspace]
resolver = "2"
members = [
    "crates/tomo",
    "crates/tomo-engine",
    "crates/tomo-history",
    "crates/tomo-proto",
    "crates/tomo-transport",
    "crates/tomo-watch",
    "crates/tomo-config",
]

[workspace.package]
version = "0.1.13"
edition = "2021"
license = "MIT"
repository = "https://github.com/CHANGEME/tomo"
authors = ["Tomo contributors"]

# Add each dependency here, reference from members with `dep.workspace =
# true`, and record the rationale in docs/SPEC.md §11.
# Reminder (docs/SPEC.md §3): rustls not OpenSSL; rusqlite with `bundled`.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.8"
globset = "0.4"
proptest = "1"
tempfile = "3"
fd-lock = "4"
owo-colors = "4"
notify = "8"
unicode-normalization = "0.1"
blake3 = "1"
postcard = { version = "1", features = ["alloc"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde_json = "1"
getrandom = "0.3"
signal-hook = "0.3"
russh = { version = "0.62", default-features = false, features = ["flate2", "ring", "rsa"] }
russh-sftp = "2"
tokio = { version = "1", features = ["rt", "net", "io-util", "time", "sync", "macros"] }
sha2 = "0.10"
fastcdc = "3"
zstd = "0.13"
rusqlite = { version = "0.37", features = ["bundled"] }
mimalloc = { version = "0.1", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Library code must not panic on Results/Options; tests may #[allow] locally.
unwrap_used = "deny"
expect_used = "deny"
# Pedantic escape hatches we accept project-wide (keep this list short and
# justified; anything else needs a per-line #[allow] with a comment):
module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
