[package]
name = "tomo-config"
description = "Config parsing, ignore rules, path classes"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
globset.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true

[lints]
workspace = true
