[package]
name = "tomo-engine"
description = "Pure sync state machine, vector clocks, conflict resolution, pressure controller"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true

[dev-dependencies]
proptest.workspace = true
