[package]
name = "tomo-history"
description = "Content-addressed store (FastCDC/BLAKE3/zstd) + SQLite metadata"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
tomo-engine = { path = "../tomo-engine" }
rusqlite.workspace = true
fastcdc.workspace = true
zstd.workspace = true
blake3.workspace = true
serde.workspace = true
postcard.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
