[package]
name = "tomo-transport"
description = "SSH transport, remote bootstrap, stdio tunnel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
russh.workspace = true
russh-sftp.workspace = true
tokio.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
