[package]
name = "tomo-transport"
description = "SSH transport, remote bootstrap, stdio tunnel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
# Embed release binaries for every supported triple found in `$TOMO_EMBED_DIR`
# at build time (docs/SPEC.md §3), so the SSH bootstrap can push the right one
# with zero downloads. Off by default: dev builds embed nothing to keep the
# edit-compile loop fast, and fall back to the debug-only `current_exe`
# substitution instead (see `binsource`). Turned on for release "fat" binaries.
embed-binaries = []

[dependencies]
thiserror.workspace = true
russh.workspace = true
russh-sftp.workspace = true
tokio.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
