[package]
name = "tomo-watch"
description = "Filesystem watcher adapters, canonicalization, echo suppression"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tomo-engine = { path = "../tomo-engine" }
tomo-config = { path = "../tomo-config" }
notify.workspace = true
unicode-normalization.workspace = true
blake3.workspace = true
serde.workspace = true
postcard.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true

[lints]
workspace = true
