[package]
name = "tomo"
description = "Tomo CLI — real-time two-way file sync with history"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
postcard.workspace = true
clap.workspace = true
getrandom.workspace = true
blake3.workspace = true
thiserror.workspace = true

tomo-engine = { path = "../tomo-engine" }
tomo-watch = { path = "../tomo-watch" }
tomo-proto = { path = "../tomo-proto" }
tomo-config = { path = "../tomo-config" }

[dev-dependencies]
tempfile.workspace = true
